<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="user"
            type="com.cyberburyatenterprise.textme.model.User" />
        <variable
            name="loginClickHandlers"
            type="com.cyberburyatenterprise.textme.view.LoginFragment.LoginClickHandlers" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".view.LoginFragment"
        android:padding="8dp">

        <!-- TODO: Update blank fragment layout -->
        <EditText
            android:id="@+id/email_line_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={user.email}"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:layout_margin="8dp"
            android:textSize="24sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/password_line_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={user.password}"
            android:hint="@string/enter_password"
            android:layout_margin="8dp"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@id/email_line_login"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/password_line_login"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="80dp"
            android:text="@string/login"
            android:onClick="@{loginClickHandlers::onLoginPressed}"
            android:layout_marginHorizontal="8dp"/>

        <ProgressBar
            android:id="@+id/progress_bar_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/login_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_margin="8dp"
            android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>